# hello-github

./: .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/api-gateway/: main.py
apps/api-gateway/routers/: __init__.py  upload.py
docker/: Dockerfile.base
docs/: ARCHITECTURE.md  latency-baseline-w1.md  print-test-report-w1.md
infra/observability/: grafana-dashboard.json
libs/common/: __init__.py  logging.py
models/base/: README.md
scripts/: generate_test_orders.py
services/fusion/: fuse.py
services/stylize2d/: server.py
tools/: eval_avatar.py
